# MIST-Bot

./: .env  .env.example  .env.sample  .gitignore  README.md  counting.db  helper.py  main.py  mcsbot.py  mcsmanager.py  music_cache.json  my_music.py  pyproject.toml  requirements.txt  todo.md
config/: config.py  config.toml.template  logging_config.py
core/: bot.py  server_manager.py
features/: base.py  counting.py  help.py  minecraft.py  music.py  smoking.py  troll.py
utils/: cache.py  counter.py  helpers.py  logger.py
